fixed wheelchair and doctor alignment

--- a/healthharmony/static/css/landing/bed-weath.css
+++ b/healthharmony/static/css/landing/bed-weath.css
@@ -123,6 +123,9 @@
     border-radius: 10px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
 }
+.wheel-cont{
+    gap: 0.4rem;
+}
 .bed-container img{
     max-width: 90px;
     height: auto;
